--- a/apps/micro_react/project.json
+++ b/apps/micro_react/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "micro-react",
+  "name": "micro_react",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/micro-react/src",
+  "sourceRoot": "apps/micro_react/src",
   "projectType": "application",
   "targets": {
     "build": {
@@ -10,19 +10,19 @@
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
-        "outputPath": "dist/apps/micro-react",
-        "index": "apps/micro-react/src/index.html",
+        "outputPath": "dist/apps/micro_react",
+        "index": "apps/micro_react/src/index.html",
         "baseHref": "/",
-        "main": "apps/micro-react/src/main.tsx",
-        "polyfills": "apps/micro-react/src/polyfills.ts",
-        "tsConfig": "apps/micro-react/tsconfig.app.json",
+        "main": "apps/micro_react/src/main.tsx",
+        "polyfills": "apps/micro_react/src/polyfills.ts",
+        "tsConfig": "apps/micro_react/tsconfig.app.json",
         "assets": [
-          "apps/micro-react/src/favicon.ico",
-          "apps/micro-react/src/assets"
+          "apps/micro_react/src/favicon.ico",
+          "apps/micro_react/src/assets"
         ],
-        "styles": ["apps/micro-react/src/styles.css"],
+        "styles": ["apps/micro_react/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/micro_react/webpack.config.js"
       },
       "configurations": {
         "development": {
@@ -34,8 +34,8 @@
         "production": {
           "fileReplacements": [
             {
-              "replace": "apps/micro-react/src/environments/environment.ts",
-              "with": "apps/micro-react/src/environments/environment.prod.ts"
+              "replace": "apps/micro_react/src/environments/environment.ts",
+              "with": "apps/micro_react/src/environments/environment.prod.ts"
             }
           ],
           "optimization": true,
@@ -51,15 +51,15 @@
       "executor": "@nrwl/webpack:dev-server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "micro-react:build",
+        "buildTarget": "micro_react:build",
         "hmr": true
       },
       "configurations": {
         "development": {
-          "buildTarget": "micro-react:build:development"
+          "buildTarget": "micro_react:build:development"
         },
         "production": {
-          "buildTarget": "micro-react:build:production",
+          "buildTarget": "micro_react:build:production",
           "hmr": false
         }
       }
@@ -68,14 +68,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/micro-react/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["apps/micro_react/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/micro-react/jest.config.ts",
+        "jestConfig": "apps/micro_react/jest.config.ts",
         "passWithNoTests": true
       }
     }
