add fetch hook with graphql,add characters,fix micro_react webpackConfig,update micro_react app

--- a/apps/micro_react/project.json
+++ b/apps/micro_react/project.json
@@ -22,7 +22,7 @@
         ],
         "styles": ["apps/micro_react/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "apps/micro_react/webpack.config.js"
+        "webpackConfig": "@nrwl/react/plugins/webpack"
       },
       "configurations": {
         "development": {
