--- a/package.json
+++ b/package.json
@@ -17,24 +17,26 @@
     "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.4.1",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nrwl/cli": "15.0.3",
-    "@nrwl/cypress": "15.0.3",
-    "@nrwl/eslint-plugin-nx": "15.0.3",
-    "@nrwl/jest": "15.0.3",
-    "@nrwl/linter": "15.0.3",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "15.0.3",
-    "@nrwl/web": "15.0.3",
-    "@nrwl/workspace": "15.0.3",
+    "@nrwl/cli": "15.0.4",
+    "@nrwl/cypress": "15.0.4",
+    "@nrwl/eslint-plugin-nx": "15.0.4",
+    "@nrwl/jest": "15.0.4",
+    "@nrwl/linter": "15.0.4",
+    "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/react": "15.0.4",
+    "@nrwl/web": "15.0.4",
+    "@nrwl/workspace": "15.0.4",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
@@ -48,7 +50,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "15.0.3",
+    "nx": "15.0.4",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
@@ -56,3 +58,4 @@
     "typescript": "~4.8.2"
   }
 }
+
