--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.18",
-    "@types/react": "18.0.20",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -58,4 +58,3 @@
     "typescript": "~4.8.2"
   }
 }
-
